--- a/src/main/resources/db/changelog/v.1.0.1/create-table-reminder.yaml
+++ b/src/main/resources/db/changelog/v.1.0.1/create-table-reminder.yaml
@@ -35,3 +35,4 @@ databaseChangeLog:
                     foreignKeyName: user_reminder_fk
                     referencedTableName: users
                     referencedColumnNames: id
+                    deleteCascade: true
