--- a/src/main/resources/db/changelog/v.1.0.0/create-table-user.yaml
+++ b/src/main/resources/db/changelog/v.1.0.0/create-table-user.yaml
@@ -25,4 +25,22 @@ databaseChangeLog:
 
               - column:
                   name: telegram_id
+                  type: int
+
+              - column:
+                  name: username
                   type: varchar(255)
+                  constraints:
+                    nullable: false
+
+              - column:
+                  name: password
+                  type: varchar(255)
+                  constraints:
+                    nullable: false
+
+              - column:
+                  name: role
+                  type: varchar(32)
+                  constraints:
+                    nullable: false
