correct edit-remind.html, update application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,10 @@ spring:
     username: postgres
     password: postgres
 
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
 #server:
 #  tomcat:
 #    relaxed-path-chars: \
