--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -7,6 +7,10 @@ databaseChangeLog:
       file: v.1.0.1/changelog.yaml
       relativeToChangelogFile: true
 
+  - include:
+      file: v.1.0.2/changelog.yaml
+      relativeToChangelogFile: true
+
 
 #<?xml version="1.0" encoding="UTF-8"?>
 #<databaseChangeLog
